--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -33,4 +33,20 @@
   overflow: hidden;
   overflow-wrap: break-word;
   height: 26px;
+  resize: none;
+}
+
+.question-ctnr {
+  box-sizing: border-box;
+  display: flex;
+  z-index: 0;
+  position: relative;
+  transition-duration: 180ms;
+  transition-timing-function: ease-in-out;
+  border-radius: 0px;
+  min-height: unset;
+  border-color: #dee0e1;
+  border-bottom-style: solid;
+  border-width: 1px;
+  background-color: #fff;
 }
